devops/k8s/client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
  namespace: devops-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
      - name: client
        image: devops-client-image
        imagePullPolicy: Always
        ports:
        - containerPort: 80

        # Dynamic API URL passed at runtime (env.sh injects it)
---
apiVersion: v1
kind: Service
metadata:
  name: client-service
  namespace: devops-system
spec:
  type: NodePort
  selector:
    app: client
  ports:
  - port: 80
    targetPort: 80
