devops/k8s/server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
  namespace: devops-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
      - name: server
        image: devops-server-image
        imagePullPolicy: Always
        ports:
        - containerPort: 1337
        volumeMounts:
        - name: uploads
          mountPath: /opt/app/public/uploads
      volumes:
      - name: uploads
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: server
  namespace: devops-system
spec:
  type: NodePort
  selector:
    app: server
  ports:
  - port: 1337
    targetPort: 1337
    nodePort: 30002
